Add iteration 2 to jquery-exercise

--- a/Day1/jquery-exercise/index.html
+++ b/Day1/jquery-exercise/index.html
@@ -6,7 +6,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
-<h1 id="pharse"></h1>
+<div>
+  <h1 id="pharse"></h1>
+  <button id="button-pharse">Refresh</button>
+</div>
+
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
